--- a/entries/entry1/assets/entry1.css
+++ b/entries/entry1/assets/entry1.css
@@ -1,228 +1,327 @@
-.zoom-in-out-box {
-  animation: zoom-in-zoom-out 2s ease infinite;
+body {
+  margin: 0;
+  padding: 0;
+  background-color: rgb(237, 229, 248);
+  }
+    
+.video-container {
+  width:100%;
+  height:100%;
+  position: relative;
+  object-fit:cover
+  margin: 0 auto;
+}
+  
+.video-container video {
+  width: 100%;
+  height: 100;
+}
+
+video::-webkit-media-controls {
+  display: none !important;
+}
+
+.video-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none; 
+}
+  
+.video-overlay img {
+  width: 100%;
+  height: 100%;
+  opacity: 100%;
+}
+  
+.overlay-text{
+  position: absolute;
   text-align: center;
-  padding-top: 20px;
+  line-height: 1;
   font-size: 60px;
+  color: black;
+  font-family: "Dela Gothic One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+  
+.overlay-text2{
+  position: absolute;
+  top: 55%; 
+  left: 46%; 
+  text-align: center;
+  line-height: 1;
+  font-size: 60px;
+  color: black;
+  font-family: 'Apple Garamond';
+  font-weight: 400;
+  font-style: italic;
+}
+
+.text-section2 {
+background-color:rgb(237, 229, 248);
+text-align: center;
+margin-top: 20px;
+color:rgb(255, 205, 118);
+font-family: "Dela Gothic One", sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: 30px;
+padding-top: 20px;
+padding-left: 10px;
+padding-right: 10px;
+}
+
+.text-section3 {
+  background-color:rgb(237, 229, 248);
+  padding: 20px;
+  text-align: center;
+  margin-bottom: 60px;
+  font-family: "Dela Gothic One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   color:rgb(255, 205, 118);
+  font-size: 30px;
+  text-align: center;
+}
+
+a {
+  color: rgb(255, 205, 118);
+  text-decoration: 
+}
+
+a.social:hover{
+  font-family: 'Apple Garamond';
+  font-style: italic;
+  color:rgb(255, 205, 118);
+  font-size: 30px;
+}
+
+a.social:visited {
+  color: rgb(255, 205, 118);
+  background-color: transparent;
+  text-decoration: none;
+}
+
+.text-section {
+  background-color:rgb(126, 112, 147);
+  margin-left: 30vh;
+  margin-right: 30vh;
+  text-align: relative;
+  margin-bottom: 80px;
+  margin-top: 20px;
+  color:rgb(255, 205, 118);
+  font-family:Garamond, Georgia, 'Times New Roman', Times, serif;
+  font-size: 30px;
+  font-style: italic;
+}
+
+ul {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+ul li a {
+  color: #fff;
+  padding: 15px;
+}
+
+section {
+  padding: 20px;
+  margin: 15px auto 0;
+}
+
+.bg {
+  background-color: rgb(255, 205, 118);
+  color: #FFF;
+  text-align: center;
+  margin-top: 20px;
+  font-family: "Dela Gothic One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 50px;
+  padding-top: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.purple-section {
+  background-color: rgb(255, 205, 118);
+  padding: 20px 0; 
+  overflow: hidden;
+}
+
+.purple-bttom {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.purple-content {
+  flex: 1;
+  padding: 20px;
+}
+
+.purple-paragraph h2 {
+  margin-top: 10px;
+  color: rgb(237, 229, 248);
+  font-size: 40px;
+  flex: 1;
+  padding: 20px;
+}
+
+
+.purple-paragraph p {
+  margin-top: 5px;
+  line-height: 1.6;
+  color: rgb(237, 229, 248);
+}
+
+.mid-content{
+width: 1365px;
+margin: auto;
+}
+
+p{
+font-family:Garamond, Georgia, 'Times New Roman', Times, serif;
+font-style: italic;
+}
+
+body,h2,h3,h4,h5,h6,span,b,a,small,div{
+font-family: "Dela Gothic One", sans-serif;
+}
+
+
+.game-title {
+color: rgb(237, 229, 248);
+background-color: rgb(255, 205, 118);
+padding: 10px 20px;
+border-radius: 8px;
+display: inline-block;
+font-size: 40px;
+font-weight: bold;
+margin-bottom: 20px;
+font-family: "Dela Gothic One", sans-serif;
+text-align: center;
+box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  font-family: "Dela Gothic One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  border: none;
+  outline: none;
+  background-color: rgb(255, 205, 118);
+  color: rgb(237, 229, 248);
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+  
+#myBtn:hover {
+  background-color: rgb(255, 205, 118);
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #000000;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;top: 0;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
   font-family: "Dela Gothic One", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-@keyframes zoom-in-zoom-out {
-  0% {
-    transform: scale(1, 1);
-  }
-  50% {
-    transform: scale(1.5, 1.5);
-  }
-  100% {
-    transform: scale(1, 1);
-  }
+li a:hover:not(.active) {
+  background-color: #45454b;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.active {
+  background-color:rgb(255, 205, 118);
 }
 
-.image-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px; 
+canvas {
+  display: block;
+  background-color: white;
 }
 
-.row {
-  display: flex;
-  justify-content: center;
-  gap: 20px; 
+.image-gallery {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin: 20px auto;
+  max-width: 800px;
+  grid-template-rows: auto auto;
+  grid-template-areas:
+      "image1 image2"
+      "image3 image4"
+      "image5 image5";
 }
 
-img {
-  width: 350px; 
-  height: 450px;
-  border: 2px solid #ccc;
+.image-gallery img {
+  width: 400px;
+  height: 500px;
+  max-width: 800px;
+  border: 5px solid rgb(255, 205, 118);
+  border-radius: 5px;
+  object-fit: cover; /* Ensures images fill the container without distortion */
 }
 
-.large {
-  width: 600px; 
-  }
-
-  h2{
-    padding-top: 20px;
-    padding-bottom: 20px;
-    color: white;
-    font-size: 40px;
+.image-gallery img:nth-child(1) {
+  grid-area: image1;
 }
 
-img.c {
-    vertical-align: text-bottom;
-    width: 50px;
-    height: 50px;
-    border: none;
-  }
+.image-gallery img:nth-child(2) {
+  grid-area: image2;
+}
+
+.image-gallery img:nth-child(3) {
+  grid-area: image3;
+}
+
+.image-gallery img:nth-child(4) {
+  grid-area: image4;
+}
 
 
-  .dela-gothic-one-regular {
-    font-family: "Dela Gothic One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-
-  .prompt-thin {
-    font-family: "Prompt", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-  }
-  
-  .prompt-extralight {
-    font-family: "Prompt", sans-serif;
-    font-weight: 200;
-    font-style: normal;
-  }
-  
-  .prompt-light {
-    font-family: "Prompt", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-  }
-  
-  .prompt-regular {
-    font-family: "Prompt", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .prompt-medium {
-    font-family: "Prompt", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  .prompt-semibold {
-    font-family: "Prompt", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-  }
-  
-  .prompt-bold {
-    font-family: "Prompt", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .prompt-extrabold {
-    font-family: "Prompt", sans-serif;
-    font-weight: 800;
-    font-style: normal;
-  }
-  
-  .prompt-black {
-    font-family: "Prompt", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-  }
-  
-  .prompt-thin-italic {
-    font-family: "Prompt", sans-serif;
-    font-weight: 100;
-    font-style: italic;
-  }
-  
-  .prompt-extralight-italic {
-    font-family: "Prompt", sans-serif;
-    font-weight: 200;
-    font-style: italic;
-  }
-  
-  .prompt-light-italic {
-    font-family: "Prompt", sans-serif;
-    font-weight: 300;
-    font-style: italic;
-  }
-  
-  .prompt-regular-italic {
-    font-family: "Prompt", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-  }
-  
-  .prompt-medium-italic {
-    font-family: "Prompt", sans-serif;
-    font-weight: 500;
-    font-style: italic;
-  }
-  
-  .prompt-semibold-italic {
-    font-family: "Prompt", sans-serif;
-    font-weight: 600;
-    font-style: italic;
-  }
-  
-  .prompt-bold-italic {
-    font-family: "Prompt", sans-serif;
-    font-weight: 700;
-    font-style: italic;
-  }
-  
-  .prompt-extrabold-italic {
-    font-family: "Prompt", sans-serif;
-    font-weight: 800;
-    font-style: italic;
-  }
-  
-  .prompt-black-italic {
-    font-family: "Prompt", sans-serif;
-    font-weight: 900;
-    font-style: italic;
-  }  
-
-  @keyframes typing {
-    from { width: 0; }
-    to { width: 100%; visibility: visible; }
-  }
-  
-  div {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  
-  p {
-    background-color: rgb(255, 205, 118);
-    color: white;
-    font-family: "Prompt", sans-serif;
-    font-weight: 500;
-    text-align: center;
-    font-style: italic;
-    font-size: 30px;
-    overflow: hidden;
-    white-space: nowrap;
-    animation-name: typing;
-    animation-duration: 5s;
-    animation-timing-function: steps(200, end);
-    animation-iteration-count: 1;
-  
-    &:nth-child(1) {
-      animation-delay: 0s;
-    }
-  
-    &:nth-child(2) {
-      visibility: hidden;
-      animation-delay: 5s;
-      animation-fill-mode: forwards;
-    }
-
-    &:nth-child(3) {
-      visibility: hidden;
-      animation-delay: 10s;
-      animation-fill-mode: forwards;
-    }
-  }
 
   #myBtn {
     display: none;
@@ -297,6 +396,55 @@ img.c {
   
   .active {
     background-color:rgb(255, 205, 118);
+  }
+
+
+
+  body {
+    align-items: center;
+    justify-content: center;
+  }
+
+  
+  #container {
+    max-width: 80vw;
+    max-height: 80vh;
+    position: relative;
+  }
+  
+  #player {
+    width: 100%;
+    border: 2px solid #111;
+    box-shadow: 0 0 50px #111;
+  }
+  
+  #capture-button {
+    display: block;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    bottom: 20px;
+    left: 50%;
+    margin-left: -25px;
+    border-radius: 50%;
+    background-color: #ff0000;
+    border: 2px solid #fff;
+    cursor: pointer;
+    transition: all .15s ease-in-out;
+    opacity: 0.5;
+    outline: none;
+    
+    &:hover {
+      transform: scale(1.1);
+    }
+    
+    &:active {
+      background-color: #00ff00;
+    }
+  }
+  
+  #output {
+    display: none;
   }
 
 
