--- a/entries/entry1/assets/entry1.css
+++ b/entries/entry1/assets/entry1.css
@@ -444,4 +444,15 @@ li a:hover:not(.active) {
     display: none;
   }
 
+.text-title {
+  color: rgb(251, 238, 215);
+  background-color: rgb(255, 205, 118);
+  padding: 30px 300px;
+  display: inline-block;
+  font-size: 30px;
+  font-weight: 400;
+  margin-bottom: 20px;
+  font-family: "Dela Gothic One", sans-serif;
+  text-align: center;
+}
 
