--- a/entries/entry1/assets/entry1.css
+++ b/entries/entry1/assets/entry1.css
@@ -412,7 +412,7 @@ li a:hover:not(.active) {
   #player {
     width: 100%;
     border: 2px solid #111;
-    box-shadow: 0 0 50px #111;
+    box-shadow: 0 0 50px rgb(255, 205, 118)
   }
   
   #capture-button {
@@ -436,7 +436,7 @@ li a:hover:not(.active) {
     }
     
     &:active {
-      background-color: rgb(251, 238, 215);
+      background-color: rgb(0, 0, 0);
     }
   }
   
