--- a/entries/entry3/assets/entry3.css
+++ b/entries/entry3/assets/entry3.css
@@ -316,17 +316,6 @@ li a:hover:not(.active) {
   grid-area: image4;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #f5f5f5;
-  font-family: Arial, sans-serif;
-}
-
 .canvas-container {
   display: flex;
   flex-direction: column;
@@ -345,14 +334,16 @@ canvas {
 
 button {
   padding: 10px 20px;
-  background-color: #007BFF;
+  background-color: rgb(75, 56, 105);
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
+  font-family: "Dela Gothic One", sans-serif;
+  font-style: normal; 
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: rgb(237, 229, 248);
 }
