--- a/entries/entry5/assets/entry5.css
+++ b/entries/entry5/assets/entry5.css
@@ -251,6 +251,15 @@ button.coffee-btn:hover {
     background-color: #F4511E;
 }
 
+p{
+    font-family:Garamond, Georgia, 'Times New Roman', Times, serif;
+    font-style: italic;
+}
+  
+body,h2,h3,h4,h5,h6,span,b,a,small,div{
+    font-family: "Dela Gothic One", sans-serif;
+}
+
 .outfit-title {
     background-color: rgb(224, 113, 133); /* Choose a background color */
     padding: 10px 20px;
