--- a/entries/entry1/assets/entry1.css
+++ b/entries/entry1/assets/entry1.css
@@ -297,7 +297,7 @@ li a:hover:not(.active) {
   height: 500px;
   max-width: 800px;
   border: 2px solid rgb(255, 205, 118);
-  object-fit: cover; /* Ensures images fill the container without distortion */
+  object-fit: cover; 
 }
 
 .image-gallery img:nth-child(1) {
@@ -539,7 +539,6 @@ li a:hover:not(.active) {
     margin-top: 0; 
 }
 
-/* GGreen section */
 .green-section{
   width: 100%;
   height: 500px;
