--- a/entries/entry3/assets/entry3.css
+++ b/entries/entry3/assets/entry3.css
@@ -297,7 +297,7 @@ li a:hover:not(.active) {
   max-width: 800px;
   border: 5px solid rgb(75, 56, 105);
   border-radius: 5px;
-  object-fit: cover; /* Ensures images fill the container without distortion */
+  object-fit: cover; 
 }
 
 .image-gallery img:nth-child(1) {
